--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,6 @@
 <section class="contacts">
   <div class="contacts__container container">
-    <h2 class="contacta__title visually-hidden">Contacts</h2>
+    <h2 class="contacts__title visually-hidden">Contacts</h2>
     <ul class="contacts__list">
       <li class="contacts__item">
         <p class="contacts__agency">cafe</p>
