--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,9 @@
 @import './utils/variables';
 @import './base/base';
 
+// about
+@import './components/about';
+
 // contacts
 
 @import './components/contacts';
