--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -9,6 +9,7 @@
   line-height: calc(22 / 18);
   text-align: center;
   text-transform: uppercase;
+  margin-bottom: 12px;
 }
 
 .products__title {
@@ -18,6 +19,7 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  margin-bottom: 148px;
 }
 
 .products__name {
@@ -38,30 +40,19 @@
 }
 
 .products__item {
+  position: relative;
   text-align: center;
-  margin-bottom: 60px;
-
+  padding: 123px 40px 16px 40px;
+  border-radius: 24px;
+  margin-bottom: 168px;
+  background-color: getBgColor(prod-green);
+  &:nth-child(2) {
+    background-color: getBgColor(prod-yellow);
+  }
   &:last-child {
+    background-color: #d6936d;
     margin-bottom: 0;
   }
-}
-
-.products__thumb {
-  position: relative;
-  border-radius: 24px;
-  padding: 123px 40px 16px 40px;
-}
-
-.products__thumb--green {
-  background-color: getBgColor(prod-green);
-}
-
-.products__thumb--yellow {
-  background-color: getBgColor(prod-yellow);
-}
-
-.products__thumb--coral {
-  background-color: #d6936d;
 }
 
 .products__circle {
@@ -70,9 +61,11 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  top: -100;
+  left: 40;
 }
 
-.products__circle--green {
+.products__circle---green {
   background: linear-gradient(
       0deg,
       rgba(156, 190, 143, 0.7),
