--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -10,7 +10,11 @@
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and
           natural stabilizer
         </p>
-        <button type="button" class="products__btn"></button>
+        <button type="button" class="products__btn">
+          <svg class="" width="40" height="16">
+            <use href="./images/svg/symbol-defs.svg#arrow"></use>
+          </svg>
+        </button>
       </li>
       <li class="products__item">
         <div class="products__circle products__circle--yellow"></div>
@@ -19,7 +23,11 @@
           Fragrant invigorating drink created from 100% natural ingredients
           without the use of preservatives and flavor enhancers
         </p>
-        <button type="button" class="products__btn"></button>
+        <button type="button" class="products__btn">
+          <svg class="" width="40" height="16">
+            <use href="./images/svg/symbol-defs.svg#arrow"></use>
+          </svg>
+        </button>
       </li>
       <li class="products__item">
         <div class="products__circle products__circle--coral"></div>
@@ -28,7 +36,11 @@
           Sweet drinks based on milk and ice cream, supplemented with syrups,
           fruits, berries and other sweets of your choice
         </p>
-        <button type="button" class="products__btn"></button>
+        <button type="button" class="products__btn">
+          <svg class="" width="40" height="16">
+            <use href="./images/svg/symbol-defs.svg#arrow"></use>
+          </svg>
+        </button>
       </li>
     </ul>
   </div>
