--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,6 +1,8 @@
 .section__products {
   background-image: url(../images/background/mobile/Backgroud_mobile_885.png);
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .products__label {
@@ -41,7 +43,11 @@
 
 .products__item {
   position: relative;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  width: 280px;
+  height: 420px;
   padding: 123px 40px 16px 40px;
   border-radius: 24px;
   margin-bottom: 168px;
@@ -62,7 +68,7 @@
   height: 200px;
   border-radius: 50%;
   top: -100;
-  left: 40;
+  left: 80;
 }
 
 .products__circle---green {
@@ -73,6 +79,20 @@
     ),
     #d9d9d9;
   box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: -11;
+    left: 0;
+    background-image: url(../images/products/tablet-mobile/1/1_200.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 200px;
+    height: 200px;
+    z-index: 1000;
+  }
 }
 
 .products__circle--yellow {
@@ -83,6 +103,19 @@
     ),
     #d9d9d9;
   box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+   &::before {
+    content: '';
+    position: absolute;
+    top: -11;
+    left: 0;
+    background-image: url(../images/products/tablet-mobile/2/2_200.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 200px;
+    height: 200px;
+    z-index: 1000;
+  }
 }
 
 .products__circle--coral {
@@ -93,4 +126,24 @@
     ),
     #d9d9d9;
   box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
+    &::before {
+    content: '';
+    position: absolute;
+    top: -11;
+    left: 0;
+    background-image: url(../images/products/tablet-mobile/3/3_200.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 200px;
+    height: 200px;
+    z-index: 1000;
+  }
+}
+
+.products__btn {
+    border: none;
+    background-color: inherit;
+    margin-top: auto;
+ 
 }
