add styles contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -122,14 +122,22 @@
       </li>
     </ul>
   </div>
-  <ul>
-    <li>
+  <ul class="button__list">
+    <li class="button__item">
       <button class="button button__locations" type="button">
         Our Locations
+        <svg class="button__icon" width="12" height="12">
+          <use href="./images/svg/symbol-defs.svg#arrow"></use>
+        </svg>
       </button>
     </li>
-    <li>
-      <button class="button button__franchise" type="button">Franchise</button>
+    <li class="button__item">
+      <button class="button button__franchise" type="button">
+        Franchise
+        <svg class="button__icon" width="12" height="12">
+          <use href="./images/svg/symbol-defs.svg#arrow"></use>
+        </svg>
+      </button>
     </li>
   </ul>
 </section>
