--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,7 @@
 @import './utils/variables';
 @import './base/base';
 
+@import './components/advanteges';
 // contacts
 
 @import './components/contacts';
