add tablet and desctop

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -43,7 +43,7 @@
         </ul>
       </li>
       <li class="contacts__item">
-        <p class="contacts__agency">food truck</p>
+        <p class="contacts__agency contacts__agency--padding">food truck</p>
         <p class="contacts__city">Los Angeles</p>
         <address class="contacts__address">
           <a
@@ -127,7 +127,7 @@
       <button class="button button__locations" type="button">
         Our Locations
         <svg class="button__icon" width="12" height="12">
-          <use href="./images/svg/symbol-defs.svg#arrow"></use>
+          <use href="./images/svg/symbol-defs.svg#bird"></use>
         </svg>
       </button>
     </li>
@@ -135,7 +135,7 @@
       <button class="button button__franchise" type="button">
         Franchise
         <svg class="button__icon" width="12" height="12">
-          <use href="./images/svg/symbol-defs.svg#arrow"></use>
+          <use href="./images/svg/symbol-defs.svg#bird"></use>
         </svg>
       </button>
     </li>
