додає деякі зміни

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,10 @@
 @import './utils/variables';
 @import './base/base';
 
+// hero
+
+@import './components/hero';
+
 // contacts
 
 @import './components/contacts';
