--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,9 +1,8 @@
 .header {
     padding-top: 12px;
     padding-bottom: 12px;
-    padding-left: 24px;
-    padding-right: 24px;
-    width: 320px;
+    display: flex;
+    justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
 }
