--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,7 +1,22 @@
-// .contacts {
-//   position: relative;
-//   top: -360px;
-// }
+.contacts {
+  //   position: relative;
+  //   top: -360px;
+  //
+  @media screen and (max-width: 7670px) {
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 50px;
+    padding-bottom: 60px;
+  }
+}
 
 .contacts__list {
   display: flex;
@@ -12,10 +27,14 @@
   @media screen and (max-width: 767px) {
     flex-direction: column;
   }
+
+  @media screen and (min-width: 1200px) {
+    gap: 32px;
+  }
 }
 
 .contacts__item {
-  background: getColor(primary-light);
+  background-color: getColor(primary-light);
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
   padding: 40px 32px;
@@ -24,9 +43,11 @@
     padding: 40px 24px;
     flex-basis: 224px;
   }
+
   @media screen and (min-width: 1200px) {
     padding: 40px;
     flex-basis: 368px;
+    background-color: getColor(primary-white);
   }
 }
 
