Щось накрутила, перевірте, будь ласка)

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,15 @@
-<header>a</header>
+<header class="container header">
+  <a href="./"
+    ><img
+      class="logo"
+      src="./images/logo/Logo_60.png"
+      alt="logo-ice-cream"
+      width="40"
+    />
+  </a>
+  <button class="menu-open">
+    <svg class="" width="32" height="32">
+      <use href="./images/svg/symbol-defs.svg#burger1"></use>
+    </svg>
+  </button>
+</header>
