--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,10 @@
 @import './utils/variables';
 @import './base/base';
 
+/* header */
+@import './components/header';
+@import './components/menu';
+
 @import './components/advanteges';
 // contacts
 @import './components/contacts';
