--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -2,7 +2,7 @@
     background: transparent;
     border: transparent;
     fill: #fff;
-    padding-left: 200px;
+    margin-left: 200px;
     position: absolute;
     transform: translateY(10px);
 }
