--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,42 +1,49 @@
 <footer class="footer">
-   <div class="container">
+   <div class="container footer__blocks">
+
       <div class="footer__text">
          <p class="footer__uppertitle">homemade ice cream made</p>
          <p class="footer__undertitle">with passion</p>
       </div>
-      <ul class="footer__list">
-         <li class="footer__item">
-            <a class="footer__link" href="https://github.com/" target="_blank"
-            rel="noreferrer noopener" aria-label="GitHub">
-               <svg class="footer__icon" width="34" height="34">
-                 <use href="./images/svg/symbol-defs.svg#github"></use>
-               </svg>
-            </a>
-         </li>
-         <li class="footer__item">
-            <a class="footer__link" href="https://telegram.org/" target="_blank"
-            rel="noreferrer noopener" aria-label="Telegram">
-               <svg class="footer__icon" width="34" height="34">
-                 <use href="./images/svg/symbol-defs.svg#telegram"></use>
-               </svg>
-            </a>
-         </li>
-         <li class="footer__item">
-            <a class="footer__link" href="https://www.facebook.com/" target="_blank"
-            rel="noreferrer noopener" aria-label="Facebook">
-               <svg class="footer__icon" width="34" height="34">
-                 <use href="./images/svg/symbol-defs.svg#facebook"></use>
-               </svg>
-            </a>
-         </li>
-      </ul>
-      <div class="footer__contact">
-         <p class="footer__contact-text">Feel free to contact</p>
-         <a class="footer__phone" href="tel:+610383766284">+61 (0) 383 766 284</a>
+
+
+      <div class="footer__second-block">
+         <ul class="footer__list">
+            <li class="footer__item">
+               <a class="footer__link" href="https://github.com/" target="_blank" rel="noreferrer noopener"
+                  aria-label="GitHub">
+                  <svg class="footer__icon" width="34" height="34">
+                     <use href="./images/svg/symbol-defs.svg#github"></use>
+                  </svg>
+               </a>
+            </li>
+            <li class="footer__item">
+               <a class="footer__link" href="https://telegram.org/" target="_blank" rel="noreferrer noopener"
+                  aria-label="Telegram">
+                  <svg class="footer__icon" width="34" height="34">
+                     <use href="./images/svg/symbol-defs.svg#telegram"></use>
+                  </svg>
+               </a>
+            </li>
+            <li class="footer__item">
+               <a class="footer__link" href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener"
+                  aria-label="Facebook">
+                  <svg class="footer__icon" width="34" height="34">
+                     <use href="./images/svg/symbol-defs.svg#facebook"></use>
+                  </svg>
+               </a>
+            </li>
+         </ul>
+
+         <p class="footer__contact">Feel free to contact <a class="footer__phone" href="tel:+610383766284">+61 (0) 383
+               766 284</a></p>
+
       </div>
-         <div class="footer__copyright-container">
-            <p class="footer__copyright">&#169 2022 - IceCream. All Rights Reserved.</p>
-         </div>
-      
+
+   </div>
+
+   <div class="footer__copyright-container">
+      <p class="footer__copyright">&#169 2022 - IceCream. All Rights Reserved.</p>
+
    </div>
 </footer>
