--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,10 +1,21 @@
 .footer {
+   
+   padding-top: 30px;
+   padding-bottom: 20px;
    font-weight: 700;
 }
 
 .footer__text {
    text-transform: uppercase;
    color: getColor(primary-light);
+
+   @media screen and (min-width: 768px) {
+      width: 352px;
+     
+    }
+    @media screen and (min-width: 1200px) {
+      
+    }
 }
 
 .footer__uppertitle {
@@ -18,6 +29,30 @@
    font-size: 34px;
    line-height: calc(41 / 34);
    letter-spacing: 0.04em;
+}
+
+.footer__blocks {
+   
+   @media screen and (min-width: 768px) {
+      display: flex;
+      flex-wrap: wrap;
+     
+    }
+    @media screen and (min-width: 1200px) {
+      
+    }
+   
+   
+}
+
+.footer__second-block {
+   @media screen and (min-width: 768px) {
+      width: 285px;
+     
+    }
+    @media screen and (min-width: 1200px) {
+      
+    }
 }
 
 .footer__list {
@@ -37,15 +72,11 @@
 
 .footer__contact {
    margin-bottom: 40px;
-   display: flex;
-   justify-content: flex-end;
-   gap: 4px;
 
    font-size: 12px;
    line-height: calc(22 / 12);
+   text-align: right;
 }
-
-.footer__contact-text {}
 
 .footer__phone {
    color: getColor(primary-light);
@@ -53,16 +84,19 @@
 
 
 .footer__copyright-container {
-  
-  
+   border-top: 1px solid #E1E1E1;
+   width: 100%;
 }
 
 
 .footer__copyright {
+   padding-top: 20px;
    margin: auto;
    width: 150px;
    font-size: 14px;
    line-height: calc(21 / 14);
    text-align: center;
    color: getColor(copyright);
+   
+
 }
