--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
       width="40"
     />
   </a>
-  <button class="menu-open">
+  <button class="burger">
     <svg class="" width="32" height="32">
       <use href="./images/svg/symbol-defs.svg#burger1"></use>
     </svg>
