--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,4 +1,17 @@
 .header {
     padding-top: 12px;
     padding-bottom: 12px;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+.burger {
+    fill: getColor(primary-white);
+        padding-left: 0;
+        padding-right: 0;
+        display: flex;
+        align-items: center;
+        background-color: transparent;
+        border: none;
 }
