--- a/src/partials/advanteges.html
+++ b/src/partials/advanteges.html
@@ -3,19 +3,29 @@
     <h2 class="visually-hidden">advanteges</h2>
     <ul class="advanteges-list">
       <li class="advanteges-list__item">
-        <h3 class="advanteges-list__tittle">721</h3>
-        <p class="advanteges-list__description">
+        <h3 class="advanteges-list__tittle advanteges-list__tittle--first">
+          721
+        </h3>
+        <p
+          class="advanteges-list__description advanteges-list__description--first"
+        >
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="advanteges-list__item">
-        <h3 class="advanteges-list__tittle">16kg</h3>
-        <p class="advanteges-list__description">
+        <h3 class="advanteges-list__tittle advanteges-list__tittle--second">
+          16kg
+        </h3>
+        <p
+          class="advanteges-list__description advanteges-list__description--second"
+        >
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
       </li>
       <li class="advanteges-list__item">
-        <h3 class="advanteges-list__tittle">84</h3>
+        <h3 class="advanteges-list__tittle advanteges-list__tittle--third">
+          84
+        </h3>
         <p class="advanteges-list__description">
           Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
         </p>
