--- a/src/sass/components/_advanteges.scss
+++ b/src/sass/components/_advanteges.scss
@@ -1,11 +1,39 @@
+.container{
+    padding-top: 50px;
+    padding-bottom: 32px;
+
+    @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+ @media screen and (min-width: 1200px) {
+     padding-top: 65px;
+     padding-bottom: 75px;
+}
+}
+
 .advanteges-list{
     
-    max-width: 230px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     
+    @media screen and (min-width: 768px){
+        flex-direction: row;
+        gap: 80px;
+    }
+
+        @media screen and (min-width: 1200px) {
+        gap: 32px;
+        }
 }
+
 .advanteges-list__tittle{
-    
-    margin-top: 16px;
+    display: flex;
+
+    align-items: center;
+    flex-direction: column;
     margin-bottom: 16px;
 
     font-weight: 700;
@@ -14,13 +42,99 @@
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #FCFCFC;
+    color:getColor(primary-light);
 
+    @media screen and (min-width: 768px) {
+        margin-bottom: 12px;
+
+        font-size: 48px;
+        line-height: calc(58.51/48);
+    }
+    @media screen and (min-width: 1200px){
+        
+        font-size: 58px;
+        line-height: calc(70.7/58);
+    }
+
+
+    }
+.advanteges-list__tittle::before{
+    content: " ";
+    height: 50px;
+    width: 50px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 16px;
+
+    @media screen and (min-width: 768px) {
+     margin-bottom: 32px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 40px;
+    }
 }
+
+.advanteges-list__tittle--first::before {
+    background-image: url(/src/images/advantages/cow/cow_50.png);
+
+    @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+    background-image: url(/src/images/advantages/cow/cow_100.png);
+    }
+}
+
+.advanteges-list__tittle--second::before {
+    background-image: url(/src/images/advantages/ice/ice_50.png);
+
+    @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){background-image: url(/src/images/advantages/ice/ice_100.png);
+}
+
+   }
+
+.advanteges-list__tittle--third::before {
+    background-image: url(/src/images/advantages/weight/weight_50.png);
+
+    @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+    background-image: url(/src/images/advantages/weight/weight_100.png);
+    }
+
+   }
+
+
 .advanteges-list__description{
     font-weight: 700;
     font-size: 12px;
     line-height: calc(20/12);
     text-align: center;
-    color: #FCFCFC;
+    color: getColor(primary-light);
+    
+
+    @media screen and (min-width: 768px) {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: calc(24.36/14);
+
+        margin-bottom: 0;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+        line-height: calc(28.16/16);
+    }   
 }
+@media screen and (max-width: 479px) {
+.advanteges-list__description--first {
+        margin-bottom: 22px;
+    }
+
+    .advanteges-list__description--second {
+        margin-bottom: 28px;
+    }
+}
+
+
+
