add modal contacts

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -124,7 +124,11 @@
   </div>
   <ul class="button__list">
     <li class="button__item">
-      <button class="button button__locations" type="button">
+      <button
+        class="button button__locations js-open-modal"
+        data-modal="1"
+        type="button"
+      >
         Our Locations
         <svg class="button__icon" width="12" height="12">
           <use href="./images/svg/symbol-defs.svg#bird"></use>
@@ -132,7 +136,11 @@
       </button>
     </li>
     <li class="button__item">
-      <button class="button button__franchise" type="button">
+      <button
+        class="button button__franchise js-open-modal"
+        data-modal="2"
+        type="button"
+      >
         Franchise
         <svg class="button__icon" width="12" height="12">
           <use href="./images/svg/symbol-defs.svg#bird"></use>
