--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,12 @@
 // contacts
 @import './components/contacts';
 @import './components/footer';
-// products 
+// products
 @import './components/products';
 @import './components/about';
+
+// bacdrop-modal
+@import './components/backdrop-modal';
+
+//contacts-btn
+@import './components/contacts-btn';
