--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <a href="./"
     ><img
       class="logo"
-      src="./images/logo/Logo_60.png"
+      src="../images/logo/mobile/logo_40.png"
       alt="logo-ice-cream"
       width="40"
     />
