--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,102 +1,155 @@
 .footer {
-   
-   padding-top: 30px;
-   padding-bottom: 20px;
-   font-weight: 700;
+  padding-top: 30px;
+  font-weight: 700;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 20px;
+  }
 }
 
 .footer__text {
-   text-transform: uppercase;
-   color: getColor(primary-light);
+  text-transform: uppercase;
+  color: getColor(primary-light);
 
-   @media screen and (min-width: 768px) {
-      width: 352px;
-     
-    }
-    @media screen and (min-width: 1200px) {
-      
-    }
+  @media screen and (min-width: 768px) {
+    width: 352px;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .footer__uppertitle {
-   margin-bottom: 16px;
-   font-size: 18px;
-   line-height: calc(22 / 18);
+  margin-bottom: 16px;
+  font-size: 18px;
+  line-height: calc(22 / 18);
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: calc(32 / 26);
+    letter-spacing: 0.04em;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .footer__undertitle {
-   margin-bottom: 60px;
-   font-size: 34px;
-   line-height: calc(41 / 34);
-   letter-spacing: 0.04em;
+  margin-bottom: 60px;
+  font-size: 34px;
+  line-height: calc(41 / 34);
+  letter-spacing: 0.04em;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 32px;
+    font-size: 48px;
+    line-height: calc(59 / 48);
+    letter-spacing: 0.06em;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .footer__blocks {
-   
-   @media screen and (min-width: 768px) {
-      display: flex;
-      flex-wrap: wrap;
-     
-    }
-    @media screen and (min-width: 1200px) {
-      
-    }
-   
-   
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .footer__second-block {
-   @media screen and (min-width: 768px) {
-      width: 285px;
-     
-    }
-    @media screen and (min-width: 1200px) {
-      
-    }
+  @media screen and (min-width: 768px) {
+    width: 285px;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .footer__list {
-   margin-bottom: 20px;
-   display: flex;
-   justify-content: flex-end;
-   gap: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 34px;
+  }
 }
 
-.footer__item {}
+.footer__item {
+}
 
-.footer__link {}
+.footer__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 34px;
+  height: 34px;
 
-.footer__icon {
-   fill: getColor(primary-white);
+  background-color: getColor(accent);
+  fill: getBgColor(main-green);
+  border-radius: 50%;
+
+  transition: fill getAnim(time) getAnim(func);
+
+  &:hover,
+  &:focus {
+    fill: getColor(primary-light);
+  }
 }
 
 .footer__contact {
-   margin-bottom: 40px;
+  margin-bottom: 40px;
 
-   font-size: 12px;
-   line-height: calc(22 / 12);
-   text-align: right;
+  font-size: 12px;
+  line-height: calc(22 / 12);
+  text-align: right;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+
+    font-size: 14px;
+    line-height: calc(26 / 14);
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .footer__phone {
-   color: getColor(primary-light);
+  color: getColor(primary-light);
 }
-
 
 .footer__copyright-container {
-   border-top: 1px solid #E1E1E1;
-   width: 100%;
+  border-top: 1px solid #e1e1e1;
+  width: 100%;
 }
 
-
 .footer__copyright {
-   padding-top: 20px;
-   margin: auto;
-   width: 150px;
-   font-size: 14px;
-   line-height: calc(21 / 14);
-   text-align: center;
-   color: getColor(copyright);
-   
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin: auto;
+  width: 150px;
 
+  font-size: 14px;
+  line-height: calc(21 / 14);
+  text-align: center;
+  color: getColor(copyright);
+
+  @media screen and (min-width: 768px) {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-size: 14px;
+    line-height: calc(26 / 14);
+    letter-spacing: 0.02em;
+    width: 298px;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
