--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -5,6 +5,9 @@
   @media screen and (min-width: 768px) {
     padding-top: 20px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 60px;
+  }
 }
 
 .footer__text {
@@ -16,6 +19,7 @@
   }
 
   @media screen and (min-width: 1200px) {
+    width: 510px;
   }
 }
 
@@ -31,6 +35,10 @@
   }
 
   @media screen and (min-width: 1200px) {
+    margin-bottom: 14px;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: calc(37 / 30);
   }
 }
 
@@ -40,14 +48,11 @@
   line-height: calc(41 / 34);
   letter-spacing: 0.04em;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 32px;
     font-size: 48px;
     line-height: calc(59 / 48);
     letter-spacing: 0.06em;
-  }
-
-  @media screen and (min-width: 1200px) {
   }
 }
 
@@ -59,6 +64,7 @@
   }
 
   @media screen and (min-width: 1200px) {
+    align-items: baseline;
   }
 }
 
@@ -68,6 +74,7 @@
   }
 
   @media screen and (min-width: 1200px) {
+    width: 338px;
   }
 }
 
@@ -78,6 +85,9 @@
   gap: 20px;
   @media screen and (min-width: 768px) {
     margin-bottom: 34px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 40px;
   }
 }
 
@@ -116,9 +126,6 @@
     font-size: 14px;
     line-height: calc(26 / 14);
   }
-
-  @media screen and (min-width: 1200px) {
-  }
 }
 
 .footer__phone {
@@ -148,8 +155,5 @@
     line-height: calc(26 / 14);
     letter-spacing: 0.02em;
     width: 298px;
-  }
-
-  @media screen and (min-width: 1200px) {
   }
 }
