update markup and file names

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,11 +4,12 @@
 /* header */
 @import './components/header';
 
-
 @import './components/advanteges';
 // contacts
 @import './components/contacts';
 @import './components/footer';
-// products 
+// products
 @import './components/products';
 @import './components/about';
+// sections-background
+@import './components/background';
