--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,4 +11,5 @@
 @import './components/footer';
 // products 
 @import './components/products';
+@import './components/products_modal';
 @import './components/about';
