--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -29,6 +29,7 @@
   line-height: calc(22 / 18);
 
   @media screen and (min-width: 768px) {
+    margin-bottom: 8px;
     font-size: 26px;
     line-height: calc(32 / 26);
     letter-spacing: 0.04em;
